- memory leak in wxHTTP fixed (Dimitri)
- fixes to AM_PATH_WXCONFIG autoconf macro
- added wxHashMap class that replaces type-unsafe wxHashTable and is modelled
  after (non standard) STL hash_map
- wxLocale now works in Unicode mode
- wxLocale can now load message catalogs in arbitrary encoding
- fixed the bug related to the redrawing on resize introduced in 2.3.2

Unix (Base/GUI):

- wxWindows may be built using BSD and Solaris (and possibly other) make
  programs and not only GNU make

All (GUI):

- it is now possible to set the icons of different sizes for frames (e.g. a
  small and big ones) using the new wxIconBundle class
- implemented radio menu items and radio toolbar buttons
- added possibility to show text in the toolbar buttons
- added wxArtProvider class that can be used to customize the look of standard
  wxWindows dialogs
- significantly improved native font support
- wxImage::ComputeHistogram() now uses wxImageHistogram instead of type-unsafe
  wxHashTable
- added IFF image handler
- fixed using custom renderers in wxGrid which was broken in 2.3.2
- support for multiple images in one file added to wxImage (TIFF, GIF and ICO formats)
- support for CUR and ANI files in wxImage added (Chris Elliott)
- wxTextCtrl::GetRange() added
- added wxGetFontFromUser() convenience function
- added EVT_MENU_OPEN and EVT_MENU_CLOSE events
- added Hungarian translations (Janos Vegh)
- added wxImage::SaveFile(filename) method (Chris Elliott)
- added wxImage::FloodFill and implemented wxWindowDC::DoFloodFill method
  for GTK+, Mac, MGL, X11, Motif ports (Chris Elliott)

wxMSW:

- small appearance fixes for native look under Windows XP
- refresh the buttons properly when the window is resized (Hans Van Leemputten)
- huge (40*) speed up in wxMask::Create()
- changing wxWindows styles also changes the underlying Windows window style
- wxTreeCtrl supports wxTR_HIDE_ROOT style (George Policello)
- fixed flicker in wxTreeCtrl::SetItemXXX()